samples/_failures_safe/1761364266_789ab9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b0181b5.c: In function ‘peek_token’:
./samples/SAFE/__tmp_2b0181b5.c:162:5: error: expected expression at end of input
  162 |     if (parser == NULL || parser->tokens ==
      |     ^~
./samples/SAFE/__tmp_2b0181b5.c:162:5: error: expected declaration or statement at end of input
